--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,1 @@
-<div class="large-6  columns" id="tweet_list">
-  <% current_user.tweets.reverse.each do |tweet| %>
-    <div>
-      <%= tweet.description %>
-    </div>
-  <% end %>
-</div>
+<%= render partial: "user_tweets" %>
