--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,9 @@
       <%= f.label :password  %>
       <%= f.password_field :password  %>
     </div>
-    <%= f.submit 'Sign Up', class: 'button radius left' %>
+    <ul class="button-group left">
+      <li><%= f.submit 'Sign Up', class: 'button radius' %></li>
+      <li><%= link_to 'Log in', log_in_path, class: 'button radius' %></li>
+    </ul>
   <% end %>
-  <%= link_to 'Log in', log_in_path, class: 'button radius' %>
 </div>
